加入反轉的 animation 製作 3 tabs 的頁面

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <script src="lib/onsen/js/onsenui.js"></script>
     <script src="cordova.js"></script>
     <script src="js/app.js"></script>
-
+    <script src="js/reverseAnimation.js"></script>
     <script src="templates/login/login.js"></script>
-    <script src="templates/test1/test1.js"></script>
-    <script src="templates/test1/test2.js"></script>
+    
 </head>
 
 <body ng-controller="AppController">
