--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <script src="js/app.js"></script>
     <script src="js/reverseAnimation.js"></script>
     <script src="templates/login/login.js"></script>
-    
+    <script src="templates/tab1/tab1.js"></script>
+    <script src="templates/tab1/testpage.js"></script>
 </head>
 
 <body ng-controller="AppController">
