--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <script src="js/app.js"></script>
     <script src="js/appcontroller.js"></script>
+    <script src="js/filter.js"></script>
 
     <script src="templates/login/login.js"></script>
 
@@ -33,6 +34,7 @@
     <script src="templates/setting/editprofile.js"></script>
     <script src="templates/newsfeed/information.js"></script>
     <script src="templates/newsfeed/newsfeed.js"></script>
+    <script src="templates/drink_menu/drinkoptions.js"></script>
 </head>
 
 <body ng-controller="AppController">
