--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="js/app.js"></script>
     <script src="js/appcontroller.js"></script>
     <script src="js/filter.js"></script>
+    <script src="js/service.js"></script>
 
     <script src="templates/login/login.js"></script>
 
@@ -34,7 +35,7 @@
     <script src="templates/setting/editprofile.js"></script>
     <script src="templates/newsfeed/information.js"></script>
     <script src="templates/newsfeed/newsfeed.js"></script>
-    <script src="templates/drink_menu/drinkoptions.js"></script>
+    
 </head>
 
 <body ng-controller="AppController">
