--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="utf-8">
@@ -8,25 +8,30 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-eval' 'unsafe-inline';">
 
-    <title>My App</title>
+    <title>orderdrink</title>
 
+    <!--  css style-->
     <link rel="stylesheet" href="lib/onsen/css/onsenui.css">
     <link rel="stylesheet" href="styles/onsen-css-components-blue-basic-theme.css">
     <link rel="stylesheet" href="styles/app.css" />
 
+    <!--    主要的angular 以及 jquery -->
     <script src="lib/onsen/js/angular/angular.js"></script>
     <script src="lib/onsen/js/onsenui.js"></script>
     <script src="lib/jquery/dist/jquery.min.js"></script>
     <script src="cordova.js"></script>
 
+    <!--    module, service, main app controller -->
     <script src="js/app.js"></script>
     <script src="js/appcontroller.js"></script>
     <script src="js/filter.js"></script>
     <script src="js/service_drink.js"></script>
     <script src="js/service_url.js"></script>
+    <script src="js/service_utility.js"></script>
 
+    <!--    single page controller -->
     <script src="templates/login/login.js"></script>
-
+    <script src="templates/login/signup.js"></script>
     <script src="templates/near/near.js"></script>
     <script src="templates/store/store.js"></script>
     <script src="templates/drink_menu/drinkmenu.js"></script>
@@ -37,11 +42,12 @@
     <script src="templates/newsfeed/information.js"></script>
     <script src="templates/newsfeed/newsfeed.js"></script>
 
+    <script src="js/googlemap.js"></script>
 </head>
 
 <body ng-controller="AppController">
     <ons-navigator var="mainNavigator"></ons-navigator>
 </body>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+
 
 </html>
