新增計算距離 新增註冊登入 新增從伺服器拿飲料列表

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/onsen-css-components-blue-basic-theme.css">
     <link rel="stylesheet" href="styles/app.css" />
 
+    <script src="js/distance.js"></script>
     <!--    主要的angular 以及 jquery -->
     <script src="lib/onsen/js/angular/angular.js"></script>
     <script src="lib/onsen/js/onsenui.js"></script>
@@ -42,7 +43,7 @@
     <script src="templates/newsfeed/information.js"></script>
     <script src="templates/newsfeed/newsfeed.js"></script>
 
-    <script src="js/googlemap.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 </head>
 
 <body ng-controller="AppController">
