更新 comment 的功能

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="js/service_drink.js"></script>
     <script src="js/service_url.js"></script>
     <script src="js/service_utility.js"></script>
+    <script src="js/service_comment.js"></script>
 
     <!--    single page controller -->
     <script src="templates/login/login.js"></script>
