回報的功能做正確，可以修改個人資料了

--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
     <script src="templates/setting/editprofile.js"></script>
     <script src="templates/newsfeed/information.js"></script>
     <script src="templates/newsfeed/newsfeed.js"></script>
+    <script src="templates/report/report.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 </head>
 
 <body ng-controller="AppController">
     <ons-navigator var="mainNavigator"></ons-navigator>
-</body>
 
+</body>
 
 </html>
