--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <script src="templates/newsfeed/information.js"></script>
     <script src="templates/newsfeed/newsfeed.js"></script>
     <script src="templates/report/report.js"></script>
+    <script src="templates/drink_menu/caculate.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 </head>
