使用者上傳圖片的部分還沒有做完

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <script src="js/service_user.js"></script>
 
     <!--    directive-->
-    <script src="directive/od-username.js"></script>
+    <script src="directive/od-user.js"></script>
 
     <!--    single page controller -->
     <script src="templates/login/login.js"></script>
