使用者上傳大頭照的部分

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
     <!--    directive-->
     <script src="directive/od-user.js"></script>
+    
+    <script src="js/preventEnter.js"></script>
 
     <!--    single page controller -->
     <script src="templates/login/login.js"></script>
