--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     <link rel="stylesheet" href="lib/onsen/css/onsenui.css">
     <link rel="stylesheet" href="styles/onsen-css-components-blue-basic-theme.css">
     <link rel="stylesheet" href="styles/app.css" />
-
+    <script src="js/googlemap.js"></script>
     <script src="js/distance.js"></script>
     <!--    主要的angular 以及 jquery -->
-    <script src="lib/onsen/js/angular/angular.js"></script>
-    <script src="lib/onsen/js/onsenui.js"></script>
+    <script src="lib/onsen/js/onsenui_all.min.js"></script>
     <script src="lib/jquery/dist/jquery.min.js"></script>
     <script src="cordova.js"></script>
 
@@ -51,13 +50,11 @@
     <script src="templates/store/store_addcomment.js"></script>
     <script src="templates/main_menu/menu.js"></script>
     <script src="templates/setting/setting.js"></script>
-    <script src="templates/setting/editprofile.js"></script>
     <script src="templates/newsfeed/information.js"></script>
     <script src="templates/newsfeed/newsfeed.js"></script>
     <script src="templates/report/report.js"></script>
     <script src="templates/drink_menu/caculate.js"></script>
-
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+    <script src="templates/setting/favoritedrink.js"></script>
 </head>
 
 <body ng-controller="AppController">
