--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <script src="lib/angular-moment/node_modules/moment/min/moment.min.js"></script>
     <script src="lib/angular-moment/node_modules/moment/locale/zh-tw.js"></script>
     <script src="lib/angular-moment/angular-moment.min.js"></script>
+    
+    <script src="directive/checklist-model.js"></script>
 
     <!--    module, service, main app controller -->
     <script src="js/app.js"></script>
