--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="lib/angular-moment/node_modules/moment/min/moment.min.js"></script>
     <script src="lib/angular-moment/node_modules/moment/locale/zh-tw.js"></script>
     <script src="lib/angular-moment/angular-moment.min.js"></script>
-    
+
     <script src="directive/checklist-model.js"></script>
 
     <!--    module, service, main app controller -->
@@ -40,7 +40,7 @@
 
     <!--    directive-->
     <script src="directive/od-user.js"></script>
-    
+    <script src="directive/rating.js"></script>
     <script src="js/preventEnter.js"></script>
 
     <!--    single page controller -->
