--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
     <script src="templates/report/report.js"></script>
     <script src="templates/drink_menu/caculate.js"></script>
     <script src="templates/setting/favoritedrink.js"></script>
+
+    <!-- materialize -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
 </head>
 
 <body ng-controller="AppController">
