--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <!--    directive-->
     <script src="directive/od-user.js"></script>
     <script src="directive/rating.js"></script>
+    <script src="directive/lazy.js"></script>
     <script src="js/preventEnter.js"></script>
 
     <!--    single page controller -->
