試試看可以滑動的footer效果如何

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <script src="directive/od-user.js"></script>
     <script src="directive/rating.js"></script>
     <script src="directive/lazy.js"></script>
+    <script src="directive/swipercard.js"></script>
     <script src="js/preventEnter.js"></script>
 
     <!--    single page controller -->
