修正了 splash screen  以及部分使用者 UX 體驗

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body ng-controller="AppController">
     <ons-navigator var="mainNavigator"></ons-navigator>
     <ons-modal var="gps_modal">
-        <ons-icon icon="ion-load-c" spin="true"></ons-icon>
+        <ons-icon icon="ion-load-b" spin="true"></ons-icon>
         <br>
         <br> 請稍候正在搜尋 GPS 訊號中
     </ons-modal>
